...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.main.InfoFragment">

    <LinearLayout
        android:id="@+id/llBecomeProfessional"
        style="@style/parent"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="30dp"
...
